Finished full Coquet walkthrough. Now for conclusions

--- a/report/references.bib
+++ b/report/references.bib
@@ -65,6 +65,13 @@
     organization={IEEE}
 }
 
+@misc{website:forsyde-hackage,
+    title={Hackage page for the ForSyDe library},
+    month={November},
+    year={2013},
+    howpublished={\url{https://ghc.haskell.org/trac/ghc/wiki/TypeNats}},
+}
+
 @incollection{coquet2011,
     title={Coquet: a Coq library for verifying hardware},
     author={Braibant, Thomas},
